# acadian-assessment

./: .gitignore  .justfile  .tool-versions  LICENSE  README.md  justfile  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api-service/: README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api-service/app/: __init__.py  cache.py  config.py  dependencies.py  exceptions.py  fetcher.py  main.py  returns.py  schemas.py  service.py
apps/api-service/app/routers/: __init__.py  returns.py
apps/api-service/scripts/: export_openapi.py
apps/api-service/services/yfinance/: main.py
apps/api-service/tests/: conftest.py  test_cache.py  test_endpoint.py  test_fetcher.py  test_returns.py  test_service.py
apps/web-client/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/web-client/src/: App.tsx  config.ts  constants.ts  index.css  main.tsx
apps/web-client/src/app/: store.ts
apps/web-client/src/components/: DateRangeControls.tsx  ErrorBanner.tsx  LoadingState.tsx  ReturnsChart.tsx  SummaryTable.test.tsx  SummaryTable.tsx  TickerCard.test.tsx  TickerCard.tsx  TickerGrid.tsx
apps/web-client/src/features/dateRange/: dateRangeSlice.ts
apps/web-client/src/lib/: dates.test.ts  dates.ts  format.ts  stats.test.ts  stats.ts  useIsDarkMode.ts
apps/web-client/src/test/: setup.ts
libs/sdk/: README.md  openapi-ts.config.ts  openapi.json  package.json  tsconfig.json
libs/sdk/src/: index.ts
libs/sdk/src/client/: index.ts  sdk.gen.ts  types.gen.ts
(+2 files in other folders)
